# unhwp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF.md  README.md  ROADMAP.md  pyproject.toml
.cargo/: audit.toml
.github/workflows/: bindings.yml  ci.yml  pages.yml  release.yml
benches/: parse_benchmark.rs
bindings/: README.md
bindings/csharp/: Unhwp.sln
bindings/csharp/Unhwp/: NativeMethods.cs  README.md  Unhwp.cs  Unhwp.csproj  UnhwpDocument.cs
bindings/csharp/Unhwp.Tests/: Unhwp.Tests.csproj  UnhwpTests.cs
bindings/python/: MANIFEST.in  README.md  pyproject.toml
bindings/python/src/unhwp/: __init__.py  _native.py  unhwp.py
bindings/python/tests/: test_unhwp.py
cli/: Cargo.toml
cli/src/: main.rs  update.rs  writer.rs
docs/: csharp-integration.md  index.html
examples/: extract_to_dir.rs  test_files.rs
python/unhwp/: __init__.py  _unhwp.pyi
src/: async_api.rs  cleanup.rs  detect.rs  equation.rs  error.rs  ffi.rs  lib.rs  parse_options.rs  python.rs  streaming.rs
src/hwp3/: body.rs  header.rs  mod.rs
src/hwp5/: bodytext.rs  container.rs  control.rs  docinfo.rs  header.rs  mod.rs  record.rs
src/hwpx/: container.rs  header.rs  mod.rs  section.rs  styles.rs  xml.rs
src/model/: document.rs  mod.rs  paragraph.rs  style.rs  table.rs
src/render/: heading_analyzer.rs  markdown.rs  mod.rs  options.rs
tests/: hwpx_multi_section.rs  quality_regression.rs
tests/fixtures/: two_sections.hwpx
unhwp-wasm/: Cargo.toml  README.md
unhwp-wasm/src/: document.rs  lib.rs  options.rs
