[workspace]
members = [".", "cli"]
resolver = "2"

[package]
name = "unhwp"
version = "0.1.13"
edition = "2021"
authors = ["iyulab"]
description = "A high-performance library for extracting HWP/HWPX documents into structured Markdown"
license = "MIT"
repository = "https://github.com/iyulab/unhwp"
keywords = ["hwp", "hwpx", "korean", "document", "markdown"]
categories = ["parser-implementations", "text-processing"]

[features]
default = ["hwp5", "hwpx", "python"]
hwp5 = []           # HWP 5.0 binary format support
hwpx = []           # HWPX XML format support
hwp3 = ["encoding_rs"]  # Legacy HWP 3.x support
async = ["tokio"]   # Async I/O support
python = ["dep:pyo3"]   # Python binding support

[dependencies]
# OLE container parsing (HWP 5.0)
cfb = "0.10"

# Compression
flate2 = "1.0"

# ZIP archive (HWPX)
zip = "2.2"

# XML parsing (HWPX)
quick-xml = "0.37"

# Error handling
thiserror = "2.0"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Zero-copy buffers
bytes = "1.9"

# Regular expressions (cleanup pipeline)
regex = "1.11"

# Unicode normalization (cleanup pipeline)
unicode-normalization = "0.1"

# Markdown parsing (cleanup pipeline Stage 3)
pulldown-cmark = { version = "0.12", default-features = false }
pulldown-cmark-to-cmark = "18"

# Parallel processing
rayon = "1.10"

# Optional: Legacy encoding (HWP 3.x)
encoding_rs = { version = "0.8", optional = true }

# Optional: Async support
tokio = { version = "1.42", features = ["fs", "io-util", "rt", "macros"], optional = true }

# Optional: Python support
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"], optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.14"
rand = "0.8"

[[bench]]
name = "parse_benchmark"
harness = false

[lib]
crate-type = ["lib", "cdylib"]
