[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "unhwp"
version = "0.1.13"
description = "A high-performance library for extracting HWP/HWPX documents into structured Markdown"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: General",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
keywords = ["hwp", "hwpx", "korean", "document", "markdown", "python", "pyo3", "maturin"]

[dependency-groups]
dev = ["maturin", "pytest", "ruff"]

[tool.maturin]
python-source = "python"
bindings = "pyo3"
module-name = "unhwp._unhwp"
features = ["python"]
