[package]
name = "unhwp-wasm"
version = "0.4.0"
edition = "2021"
description = "HWP/HWPX extraction to Markdown, text, and JSON (WebAssembly)"
repository = "https://github.com/iyulab/unhwp"
license = "MIT"
keywords = ["hwp", "hwpx", "korean", "wasm", "webassembly"]
categories = ["wasm", "parser-implementations"]

[lib]
crate-type = ["cdylib"]

[dependencies]
unhwp = { version = "0.4.0", path = "..", default-features = false, features = ["hwp5", "hwpx"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[package.metadata.npm]
name = "@iyulab/unhwp"
